--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		</div>
 
 							<!-- Section 3 -->
-		<div class="few_sweat_photo_backgr">
-			<div class="few_sweat_photo text" id="service" id="service_1">
+		<div class="few_sweat_photo_backgr" id="service">
+			<div class="few_sweat_photo text">
 				<div class="travel">
 					<div><img src="img/Rectangle_1.png" alt=""></div>
 					<div class="bold"><p>responsive email template</p></div>
@@ -102,8 +102,8 @@
 		</div>
 
 							<!-- Section 5 -->
-		<div class="photo_yet_backgr">
-			<div class="photo_yet text" id="photo_yet">
+		<div class="photo_yet_backgr" id="photo_yet">
+			<div class="photo_yet text">
 				<div class="section_inf_1">
 					<div><img src="img/Stolb.png" alt=""></div>
 					<div class="bold"><p>fully laered psd</p></div>
@@ -129,8 +129,8 @@
 		</div>
 
 							<!-- Section 6 -->
-		<div class="contact_inf_backgr">
-			<div class="contact_inf text" id="contact">
+		<div class="contact_inf_backgr" id="contact">
+			<div class="contact_inf text">
 				<div class="section_about_1">
 					<div class="title_in_sup">
 						<div><img src="img/telegram.png" alt=""></div>
